<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
            android:id="@+id/rule_act_rl_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            >


        <ImageView
                android:id="@+id/rule_act_img_go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:src="@drawable/ic_exit_to_app_black_36dp"/>

    </RelativeLayout>

    <TextView
            android:id="@+id/rule_act_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/rule_act_rl_top_menu"
            android:gravity="center"
            android:textSize="@dimen/rule_act_tv_title_text_size"
            android:textColor="@color/rule_act_tv_title_text_color"
            android:text="@string/rule_act_tv_title_text"
            />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rule_act_tv_title"
            android:layout_above="@+id/rule_act_btn_start">

        <TextView
                android:id="@+id/rule_act_tv_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/rule_act_tv_rule_text_size"
                android:textColor="@color/rule_act_tv_title_text_color"
                android:text="@string/rule_act_tv_rule_text"/>

    </ScrollView>

        <Button
                android:id="@+id/rule_act_btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/rule_act_btn_padding"
                android:paddingRight="@dimen/rule_act_btn_padding"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_bg"
                android:textColor="@drawable/btn_text_color"
                android:textSize="@dimen/rule_act_btn_text_size"
                android:text="@string/rule_act_btn_start_text"/>



</RelativeLayout>
