<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/app_color_main">

    <RelativeLayout
            android:id="@+id/main_act_rl_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

        <ImageView
                android:id="@+id/main_act_img_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toLeftOf="@+id/main_act_img_go_back"
                android:clickable="true"
                android:src="@drawable/ic_settings_black_36dp"/>

        <ImageView
                android:id="@+id/main_act_img_go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:src="@drawable/ic_exit_to_app_black_36dp"/>

    </RelativeLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/main_act_logo_padding"
                android:layout_above="@+id/main_act_btn_grammar"
                android:layout_below="@+id/main_act_rl_top_menu"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_eeapp"/>



    <Button
            android:id="@+id/main_act_btn_grammar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_above="@+id/main_act_btn_vocabulary"
            android:background="@drawable/btn_bg"
            android:textColor="@drawable/btn_text_color"
            android:textSize="@dimen/main_act_btn_text_size"
            android:text="@string/main_act_btn_grammar_text"/>



    <Button
            android:id="@+id/main_act_btn_vocabulary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_above="@+id/main_act_tv_appversion"
            android:background="@drawable/btn_bg"
            android:textColor="@drawable/btn_text_color"
            android:textSize="@dimen/main_act_btn_text_size"
            android:text="@string/main_act_btn_vocabulary_text"/>


    <TextView
            android:id="@+id/main_act_tv_appversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/version_num"/>

</RelativeLayout>
