<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/app_color_main">

    <RelativeLayout
            android:id="@+id/task_act_rl_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true">

        <ImageView
                android:id="@+id/task_act_img_go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:src="@drawable/ic_keyboard_arrow_left_black_36dp"/>

    </RelativeLayout>

    <TextView
            android:id="@+id/task_act_tv_task_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/task_act_rl_top_menu"
            android:textSize="@dimen/task_act_tv_task_type_text_size"
            android:textColor="@color/app_color_black"
            android:text="@string/task_act_tv_task_type_text"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/task_act_tv_task_type"
            android:layout_above="@+id/task_act_ll_bottom_menu">

        <EditText
                android:id="@+id/task_act_et_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/task_act_tv_question_text_size"
                android:textColor="@color/app_color_black"
                android:text="question"/>

        <TextView
                android:id="@+id/task_act_tv_answer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:visibility="invisible"
                android:textSize="@dimen/task_act_tv_answer_text_size"
                android:textColor="@color/app_color_black"
                android:text="answer"/>

            <WebView
                    android:id="@+id/task_act_tv_rule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:visibility="invisible"
                    android:textSize="@dimen/task_act_tv_rule_text_size"
                    android:textColor="@color/app_color_black"
                    android:text="rule"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/task_act_ll_bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        <Button
                android:id="@+id/task_act_btn_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:textColor="@drawable/btn_text_color"
                android:textSize="@dimen/task_act_btn_text_size"
                android:text="@string/task_act_btn_tip_text"/>

        <Button
                android:id="@+id/task_act_btn_check_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:textColor="@drawable/btn_text_color"
                android:textSize="@dimen/task_act_btn_text_size"
                android:text="@string/task_act_btn_check_text"/>

    </LinearLayout>

</RelativeLayout>
